[package]
name = "mines"
version = "0.2.1"
authors = ["johncf <johncf@protonmail.com>"]

repository = "https://github.com/johncf/mines"
description = "Unchecked assertions of unreachability which panics on debug builds."
documentation = "https://docs.rs/mines"

keywords = ["debug", "assert", "unreachable", "boom"]

license = "MIT/Apache-2.0"

[dependencies]
